fixed import & export buttons

--- a/QEAMApp.csproj
+++ b/QEAMApp.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <None Remove="Images\export.png" />
+    <None Remove="Images\import.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,6 +22,9 @@
 
   <ItemGroup>
     <Resource Include="Images\export.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\import.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
