added card viewer

--- a/QEAMApp.csproj
+++ b/QEAMApp.csproj
@@ -17,11 +17,14 @@
     <None Remove="Fonts\JetBrainsMono-SemiBold.ttf" />
     <None Remove="Fonts\JetBrainsMono-Thin.ttf" />
     <None Remove="Images\bg.png" />
+    <None Remove="Images\breakfast.png" />
+    <None Remove="Images\dinner.png" />
     <None Remove="Images\export.png" />
     <None Remove="Images\footer.png" />
     <None Remove="Images\header.png" />
     <None Remove="Images\icpep-logo.png" />
     <None Remove="Images\import.png" />
+    <None Remove="Images\lunch.png" />
     <None Remove="Images\name-section.png" />
     <None Remove="Images\qr-code.png" />
     <None Remove="Images\status-section.png" />
@@ -43,10 +46,13 @@
     <Resource Include="Images\bg.png">
       <CopyToOutputDirectory></CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Images\breakfast.png" />
+    <Resource Include="Images\dinner.png" />
     <Resource Include="Images\export.png" />
     <Resource Include="Images\footer.png" />
     <Resource Include="Images\header.png" />
     <Resource Include="Images\icpep-logo.png" />
+    <Resource Include="Images\lunch.png" />
     <Resource Include="Images\name-section.png" />
     <Resource Include="Images\qr-code.png" />
     <Resource Include="Images\import.png" />
