--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+Server/node_modules/
+Server/package-lock.json
+
 # User-specific files
 *.rsuser
 *.suo
