refactored to use snack bar instead of messageBox (binding error for imageSource)

--- a/QEAMApp.csproj
+++ b/QEAMApp.csproj
@@ -29,14 +29,19 @@
     <None Remove="Images\check-in_icon.png" />
     <None Remove="Images\check-out_icon.png" />
     <None Remove="Images\check_icon.png" />
+    <None Remove="Images\evening_ribbon.png" />
+    <None Remove="Images\failed_snackbar.png" />
     <None Remove="Images\found_user_loading_icon.png" />
     <None Remove="Images\go_back_button.png" />
     <None Remove="Images\Header.png" />
     <None Remove="Images\lunch_snack_icon.png" />
+    <None Remove="Images\morning_ribbon.png" />
+    <None Remove="Images\noon_ribbon.png" />
     <None Remove="Images\pm_snack_icon.png" />
     <None Remove="Images\profile_icon.png" />
+    <None Remove="Images\School %284%29.png" />
+    <None Remove="Images\success_snackbar.png" />
     <None Remove="Images\Table.png" />
-    <None Remove="Images\Welcome Ribbon.png" />
     <None Remove="Images\wrong_icon.png" />
   </ItemGroup>
 
@@ -52,14 +57,18 @@
     <Resource Include="Images\check-in_icon.png" />
     <Resource Include="Images\check-out_icon.png" />
     <Resource Include="Images\check_icon.png" />
+    <Resource Include="Images\evening_ribbon.png" />
+    <Resource Include="Images\failed_snackbar.png" />
     <Resource Include="Images\found_user_loading_icon.png" />
     <Resource Include="Images\go_back_button.png" />
     <Resource Include="Images\header.png" />
     <Resource Include="Images\lunch_snack_icon.png" />
+    <Resource Include="Images\morning_ribbon.png" />
+    <Resource Include="Images\noon_ribbon.png" />
     <Resource Include="Images\pm_snack_icon.png" />
     <Resource Include="Images\profile_icon.png" />
+    <Resource Include="Images\success_snackbar.png" />
     <Resource Include="Images\Table.png" />
-    <Resource Include="Images\Welcome Ribbon.png" />
     <Resource Include="Images\wrong_icon.png" />
   </ItemGroup>
 
