--- a/QEAMApp.csproj
+++ b/QEAMApp.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Database\logs.txt" />
     <None Remove="Fonts\JetBrainsMono-Bold.ttf" />
     <None Remove="Fonts\JetBrainsMono-ExtraBold.ttf" />
     <None Remove="Fonts\JetBrainsMono-ExtraLight.ttf" />
@@ -51,6 +52,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Database\logs.txt" />
     <Resource Include="Fonts\Poppins-Regular.ttf" />
     <Resource Include="Images\am_snack_icon.png" />
     <Resource Include="Images\barcode_scanner.png" />
